--- a/src/conclusion.tex
+++ b/src/conclusion.tex
@@ -3,9 +3,7 @@ Résumé
 
 Perspectives
 
-
-(old: )
-Ce document présente l'état actuel des travaux pour ajouter la notion de distribution de l'exécution à un réseau de Petri. La formalisation la plus générale est la seconde, et la plus simple à implémenter est la troisième. La première formalisation est un premier jet qui est peu utile en raison d'importantes limitations et n'est présent qu'à titre d'exemple.
-
-Une autre possibilité serait de modéliser la distribution de l'exécution du réseau de Petri par un autre réseau de Petri, qui ne serait pas exécuté et servirait uniquement à la vérification du modèle.
-La répartition serait alors faite à un autre niveau que celui du réseau de Petri, qui serait laissé inchangé.
+-> tester autres méthodes plus en détail
+-> trouver une notation permettant de réunir un segment "de base" et les segments "helpers (alpha/beta/...)
+-> Discuter avec compositeurs pour trouver d'autres possibilités à la répartition
+-> Tester sur un cas réel
