--- a/src/rapport.tex
+++ b/src/rapport.tex
@@ -1,5 +1,5 @@
 \RequirePackage[l2tabu, orthodox]{nag}
-\documentclass[a4paper,11pt,oneside,english,french]{report}
+\documentclass[openany,a4paper,11pt,oneside,english,french]{report}
 
 \usepackage{lettrine}
 \usepackage{hhline}
@@ -76,5 +76,6 @@
 \input{annexes.tex}
 \printglossaries
 \bibliographystyle{alpha}
-\bibliography{stagepetri}
+{\footnotesize \bibliography{stagepetri}}
+
 \end{document}
