--- a/src/implementation.tex
+++ b/src/implementation.tex
@@ -284,6 +284,9 @@ Pour tester, l'exemple présent dans les parties précédentes du document est u
 
 \subsubsection{Résultats sans application de l'algorithme}
 
+\subsubsection{Résultats avec application de l'algorithme}
+
+
 \subsubsection{Problème de latence variable avec périphérique Android}
 Cet exemple a relativement bien marché, néanmoins en moyenne ce n'était pas toujours le cas : en effet, la latence entre l'ordinateur et la tablette \brand{Android} avait un écart-type très important (de l'ordre de $\num{150} \si{\milli\second}$).
 
