--- a/src/debut.tex
+++ b/src/debut.tex
@@ -1,23 +1,33 @@
+\newgeometry{tmargin=1cm,bmargin=1cm,lmargin=1cm,rmargin=1cm}
 \begin{titlepage}
-\vspace*{\stretch{2}} 
   \begin{center}
+  	
+  	\vspace*{\stretch{1}} 
+	\begin{tabular}{cc}
+		\includegraphics[scale=0.3]{images/UnivBdx.jpg} & \includegraphics[scale=0.3]{images/BordeauxINP.jpg}
+	\end{tabular}
+
+	\vspace*{\stretch{1.2}} 
 
 	\begin{spacing}{1.7}
-    \textsc{\Huge Rapport de stage ~ \\ Répartition des réseaux de Petri dans le cadre du logiciel i-score}\\[1cm]
-    \textsc{\huge Travail réalisé dans le cadre du Master Recherche de l'Université de Bordeaux}\\[1cm]
+    \textsc{\Huge Répartition des réseaux de Petri dans le cadre du logiciel i-score}\\[1cm]
+    {\huge Travail réalisé dans le cadre du Master Recherche de l'Université de Bordeaux, spécialité Image, Son, Vidéo}\\[1cm]
+    {\Large Sous la direction de : }
+    {\Large Myriam \bsc{Desainte-Catherine},
+     Serge \bsc{Chaumette}}
     \end{spacing}
-    \textsc{\Large Version de travail}
-    
   \end{center}
   
   \vspace*{\stretch{2}}
   \begin{flushbottom}
    \begin{flushleft}
-    Jean-Michaël \textsc{Celerier} - \today \\
+    \large Jean-Michaël \textsc{Celerier} - \today \\
    \end{flushleft}
   \end{flushbottom}
 \end{titlepage}
 \clearpage
+
+\newgeometry{tmargin=1.5cm,bmargin=1.5cm,lmargin=2.5cm,rmargin=2.5cm}
 
 \selectlanguage{english}
 \begin{abstract}
