--- a/src/personnalisation.tex
+++ b/src/personnalisation.tex
@@ -108,3 +108,6 @@ escapeinside={\%*}{*)}
 
 % Typographie française
 \renewcommand{\contentsname}{Sommaire}
+
+% Petits tirets
+\setitemize{label=--}
