--- a/src/rapport.tex
+++ b/src/rapport.tex
@@ -4,7 +4,7 @@
 \usepackage{lettrine}
 \usepackage{hhline}
 \usepackage{setspace}
-\usepackage[tmargin=1.5cm,bmargin=1.5cm,lmargin=2.5cm,rmargin=2.5cm]{geometry}
+\usepackage{geometry}
 \usepackage{fixltx2e}
 \usepackage{booktabs}
 \usepackage[utf8]{inputenc}
@@ -43,8 +43,8 @@
 \usepackage{pdfpages}
 \usepackage{siunitx}
 \usepackage{caption}
-
-\usepackage[unicode]{hyperref}
+\usepackage{enumitem}
+\usepackage[unicode,linktocpage=true]{hyperref}
 \usepackage[xindy,toc]{glossaries}
 \usepackage[numbers,longnamesfirst]{natbib}
 
