--- a/src/annexes.tex
+++ b/src/annexes.tex
@@ -41,3 +41,56 @@
 	\label{apx.OSSIAExemple}
 	\includegraphics[clip,trim=0cm 28cm 0cm 0cm, width=1.00\textwidth]{images/moineOSSIA.pdf}
 	\includegraphics[clip,trim=0cm 0cm 0cm 26cm, width=1.00\textwidth]{images/moineOSSIA.pdf}
+	\chapter{Captures d'écran : exemples d'exécution}
+	\begin{figure}
+		\centering
+		\includegraphics[scale=0.5]{images/resultats/client_simple_wifi.png}
+		
+		\caption{Exécution idéale}
+		\label{fig.executionTheorique}
+	\end{figure}
+	
+	\begin{figure}
+		\centering
+		\begin{subfigure}{0.5\textwidth}
+			\centering
+			\includegraphics[scale=0.3]{images/resultats/server_simple_wifi.png}
+			\caption{Serveur}
+		\end{subfigure}
+		
+		\vspace{1cm}
+		
+		
+		\begin{subfigure}{0.5\textwidth}
+			\centering
+			\includegraphics[scale=0.16]{images/resultats/client_simple_wifi.png}
+			\caption{Client}
+		\end{subfigure}
+		
+		\caption{Exécution naïve sur tablette}
+		\label{fig.androSimpl}
+	\end{figure}
+	
+	
+	\begin{figure}
+		\centering
+		\begin{subfigure}{0.5\textwidth}
+			\centering
+			\includegraphics[scale=0.3]{images/resultats/server_algo_wifi.png}
+			\caption{Serveur}
+		\end{subfigure}
+		
+		\vspace{1cm}
+		
+		
+		\begin{subfigure}{0.5\textwidth}
+			\centering
+			\includegraphics[scale=0.16]{images/resultats/client_algo_wifi.png}
+			\caption{Client}
+		\end{subfigure}
+		
+		\caption{Exécution avec algorithme de déplacement sur tablette}
+		\label{fig.androDepl}
+	\end{figure}
+	
+	
