--- a/src/annexes.tex
+++ b/src/annexes.tex
@@ -44,53 +44,51 @@
 	\chapter{Captures d'écran : exemples d'exécution}
 	\begin{figure}
 		\centering
-		\includegraphics[scale=0.5]{images/resultats/client_simple_wifi.png}
+		\includegraphics[scale=0.45]{images/resultats/server_simple_correct.png}
 		
 		\caption{Exécution idéale}
 		\label{fig.executionTheorique}
 	\end{figure}
 	
-	\begin{figure}
+	\begin{sidewaysfigure}
 		\centering
+		\begin{tabular}{rl}
 		\begin{subfigure}{0.5\textwidth}
 			\centering
-			\includegraphics[scale=0.3]{images/resultats/server_simple_wifi.png}
+			\includegraphics[scale=0.45]{images/resultats/server_simple_wifi.png}
 			\caption{Serveur}
 		\end{subfigure}
-		
-		\vspace{1cm}
-		
-		
+		 &
 		\begin{subfigure}{0.5\textwidth}
 			\centering
-			\includegraphics[scale=0.16]{images/resultats/client_simple_wifi.png}
+			\includegraphics[scale=0.22]{images/resultats/client_simple_wifi.png}
 			\caption{Client}
 		\end{subfigure}
+		\end{tabular}
 		
 		\caption{Exécution naïve sur tablette}
 		\label{fig.androSimpl}
-	\end{figure}
+	\end{sidewaysfigure}
 	
 	
-	\begin{figure}
+	\begin{sidewaysfigure}
 		\centering
+		\begin{tabular}{rl}
 		\begin{subfigure}{0.5\textwidth}
 			\centering
-			\includegraphics[scale=0.3]{images/resultats/server_algo_wifi.png}
+			\includegraphics[scale=0.45]{images/resultats/server_algo_wifi.png}
 			\caption{Serveur}
 		\end{subfigure}
-		
-		\vspace{1cm}
-		
-		
+		&
 		\begin{subfigure}{0.5\textwidth}
 			\centering
-			\includegraphics[scale=0.16]{images/resultats/client_algo_wifi.png}
+			\includegraphics[scale=0.22]{images/resultats/client_algo_wifi.png}
 			\caption{Client}
 		\end{subfigure}
+		\end{tabular}
 		
 		\caption{Exécution avec algorithme de déplacement sur tablette}
 		\label{fig.androDepl}
-	\end{figure}
+	\end{sidewaysfigure}
 	
 	
