--- a/src/annexes.tex
+++ b/src/annexes.tex
@@ -41,12 +41,62 @@
 	\label{apx.OSSIAExemple}
 	\includegraphics[clip,trim=0cm 28cm 0cm 0cm, width=1.00\textwidth]{images/moineOSSIA.pdf}
 	\includegraphics[clip,trim=0cm 0cm 0cm 26cm, width=1.00\textwidth]{images/moineOSSIA.pdf}
-	\chapter{Captures d'écran : exemples d'exécution}
+	
+	\chapter{Captures d'écran : exemples d'exécution sur machines virtuelles}
+	\begin{figure}
+		\centering
+		\includegraphics[scale=0.55]{images/resultats/vm/serverVMideal.png}
+		
+		\caption{Exécution idéale sur une machine virtuelle}
+		\label{fig.executionTheoriqueVM}
+	\end{figure}
+
+	\begin{sidewaysfigure}
+		\centering
+		\begin{tabular}{rl}
+			\begin{subfigure}{0.5\textwidth}
+				\centering
+				\includegraphics[scale=0.45]{images/resultats/vm/serverVMsimple.png}
+				\caption{Serveur}
+			\end{subfigure}
+			&
+			\begin{subfigure}{0.5\textwidth}
+				\centering
+				\includegraphics[scale=0.45]{images/resultats/vm/clientVMsimple.png}
+				\caption{Client}
+			\end{subfigure}
+		\end{tabular}
+		
+		\caption{Exécution naïve sur machines virtuelles}
+		\label{fig.simpleVM}
+	\end{sidewaysfigure}
+	
+	\begin{sidewaysfigure}
+		\centering
+		\begin{tabular}{rl}
+			\begin{subfigure}{0.5\textwidth}
+				\centering
+				\includegraphics[scale=0.45]{images/resultats/vm/serverVMalgo.png}
+				\caption{Serveur}
+			\end{subfigure}
+			&
+			\begin{subfigure}{0.5\textwidth}
+				\centering
+				\includegraphics[scale=0.45]{images/resultats/vm/clientVMalgo.png}
+				\caption{Client}
+			\end{subfigure}
+		\end{tabular}
+		
+		\caption{Exécution avec algorithme sur machines virtuelles}
+		\label{fig.algoVM}
+	\end{sidewaysfigure}
+	
+	\chapter{Captures d'écran : exemples d'exécution avec tablette}
 	\begin{figure}
 		\centering
 		\includegraphics[scale=0.45]{images/resultats/server_simple_correct.png}
 		
-		\caption{Exécution idéale}
+		\caption{Exécution idéale sur ordinateur}
 		\label{fig.executionTheorique}
 	\end{figure}
 	
