--- a/slidesUB/conclusion.tex
+++ b/slidesUB/conclusion.tex
@@ -5,6 +5,7 @@
 
 \section{\scshape Conclusion}
 \begin{frame}
-	. Continuation en thèse
+	. Continuation en thèse -> intégration des notions spatio-temporelles.
+	
 	
 \end{frame}
