--- a/slidesUB/main.tex
+++ b/slidesUB/main.tex
@@ -37,7 +37,7 @@
 \usepackage{mfirstuc}
 
 \usepackage{siunitx}
-\usepackage{enumitem}
+
 \usepackage[numbers,longnamesfirst]{natbib}
 
 \usepackage{cleveref}
@@ -101,6 +101,8 @@
 \def\bottom#1#2{\hbox{\vbox to #1{\vfill\hbox{#2}}}}
 
 \usetikzlibrary{arrows,shapes,decorations,automata,backgrounds,petri,fit}
+
+\setbeamertemplate{itemize items}{--}
 \begin{document}
 \input{header}
 \input{presentation}
