--- a/slidesUB/methodes.tex
+++ b/slidesUB/methodes.tex
@@ -2,8 +2,17 @@
 \begin{frame}
 	\begin{figure}[h!]
 		\centering
-		\input{../src/formalisation/figures/deplacementMethode1}
-		\caption{Exemple : déplacement, première méthode}
+		\input{figures/deplacementMethode1}
+		\caption{Première méthode, avant déplacement}
 		\label{fig:deplacementMethode1}
+	\end{figure}
+\end{frame}
+
+\begin{frame}
+	\begin{figure}[h!]
+		\centering
+		\input{figures/deplacementMethode1suite}
+		\caption{Première méthode, après déplacement}
+		\label{fig:deplacementMethode12}
 	\end{figure}
 \end{frame}
