--- a/slidesUB/presentation.tex
+++ b/slidesUB/presentation.tex
@@ -1,12 +1,40 @@
 \section{\scshape Présentation}
 \subsection{Sujet}
 \begin{frame}{Sujet du stage}
+	{\large Répartition des réseaux de Petri dans i-score}
+	
+	Aspects principaux : 
+	\begin{itemize}
+		\item Réseaux de Petri $\rightarrow$ recherche d'existant et étude théorique.
+		\item i-score $\rightarrow$ implémentation dans un logiciel existant.
+	\end{itemize} 
+	\vspace{1em}
+	Aspects apparus par la suite : 
+	\begin{itemize}
+		\item Fonctionnement avec les concepts {OSSIA}.
+		\item Fonctionnement dans un cadre plus général que celui du logiciel, et sur plateformes embarquées.
+	\end{itemize}
 	
 \end{frame}
 
-\subsection{Scénarios \& temps}
-\begin{frame}{Scénarios \& temps}
-
+\subsection{OSSIA}
+\begin{frame}{OSSIA}
+	{\large Open Scenario System for Interactive Applications}
+	
+	Utilise les acquis de plusieurs années de développement au \textsc{LaBRI} et \textsc{SCRIME}; basé sur le projet \textsc{ANR Virage}.
+	
+	\vspace{1em}
+	Aspect majeur : \emph{temps}.
+	\begin{itemize}
+		\item[$\rightarrow$] Est implémenté avec la notion de scénario.
+	\end{itemize}
+	
+	Aspect majeur : \emph{interactivité}.
+		\begin{itemize}
+			\item[$\rightarrow$] Est implémenté avec le protocole \textsc{Minuit}, et le temps souple ou conditionnel.
+		\end{itemize}
+		
+	La notion de processus relie temps et interactivité.
 \end{frame}
 
 \subsection{Buts du stage}
